2008-04-10  Jonathan Pobst  <monkey@jpobst.com>

	* Form.cs: Add method for DataGridView to trigger focus cues
	even when it handles the tab keypress.

2008-04-10  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridView.cs: More keyboard handling, tab, esc.
	* DataGridViewTextBoxEditingControl.cs: Don't request arrow keys
	when at the beginning or end of the text in the text box.

2008-04-09  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCell.cs: Guard against an NRE causing a test to fail.

2008-04-09  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridView.cs: Some fixups for showing and adding the edit control.
	* DataGridViewButtonColumn.cs: Implement ToString.
	* DataGridViewCell.cs: Size and position the control simultaneously.
	* DataGridViewTextBoxCell.cs: Use base to position control.

2008-04-09  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewCell.cs: Fix up some formatting and painting code.
	* DataGridViewImageCell.cs: Implement some NIEX methods.

2008-04-09  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripItemCollection.cs: What moving an item from one owner
	to another, remove from source owner before adding to destination.
	[Fixes bug #378109]

2008-04-09  Jonathan Pobst  <monkey@jpobst.com>

	* PictureBox.cs: Call Load when ImageLocation is set.
	[Fixes bug #378308]

2008-04-09  Atsushi Enomoto  <atsushi@ximian.com>

	* X11Keyboard.cs, XplatUIX11.cs :
	  Implement over-the-spot mode (with some odd offsets).
	  - set preedit position when caret is set.
	  - Wrap XMoveResizeWindow() to move preedit position.

2008-04-08  Everaldo Canuto  <ecanuto@novell.com>

	* X11keyboard.cs: Fix last patch, maxval must be less not greater than
	array lenght.

2008-04-08  Everaldo Canuto  <ecanuto@novell.com>

	* KeyboardLayouts.cs: Uses GENERATING_RESOURCES to make VKeyTableIndex
	and ScanTableIndex public, it fix compilations errors when compiling
	WinForms to generate keyboard layout resources.

2008-04-08  Everaldo Canuto  <ecanuto@novell.com>
