@@ -1,3 +1,8 @@
+2008-04-10  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* X11Keyboard.cs, X11Structs.cs : make over-the-spot mode default.
+	  Add some on-the-spot code, but it seems we don't need it.
+
 2008-04-10  Jonathan Pobst  <monkey@jpobst.com>
 
 	* Form.cs: Add method for DataGridView to trigger focus cues
